# keelos

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  README.md  audit.toml  clippy.toml  rust-toolchain.toml  test_pki.rs
.ai-context/: STYLE_GUIDE.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_body.md
.github/workflows/: ci.yml  claude.yml  doc-automation.yml  doc-maintenance.yml  publish-builder.yml  release-os.yml  release-osctl.yml  release.yml
cmd/keel-agent/: Cargo.toml  README.md
cmd/keel-agent/src/: audit.rs  bootstrap.rs  cert_manager.rs  cert_metrics.rs  cert_renewal.rs  diagnostics.rs  disk.rs  health.rs  health_check.rs  hooks.rs  k8s_csr.rs  lib.rs  main.rs  mtls.rs  network.rs  rbac.rs  server_cert.rs  telemetry.rs  update_scheduler.rs
cmd/keel-agent/tests/: e2e.rs
cmd/keel-init/: Cargo.toml  README.md
cmd/keel-init/src/: bootstrap_certs.rs  main.rs  telemetry.rs
cmd/matic-agent/: Cargo.toml
cmd/matic-agent/src/: disk.rs  health.rs  health_check.rs  main.rs  telemetry.rs  update_scheduler.rs
cmd/matic-init/: Cargo.toml
cmd/matic-init/src/: main.rs  telemetry.rs
cmd/osctl/: Cargo.toml  README.md
cmd/osctl/src/: cert_store.rs  certs.rs  init.rs  main.rs  rotate.rs
docs/: README.md  architecture.md  cert-quick-reference.md  certificate-management.md  getting-started.md  image-variants.md  installation.md  troubleshooting.md  using-osctl.md
docs/api/: health-and-rollback.md  update-scheduling.md
docs/getting-started/: first-boot.md  quickstart-qemu.md  system-requirements.md
docs/guides/: audit-logging.md  certificate-management.md  diagnostics.md  kubernetes-bootstrap.md  rbac.md
docs/learn-more/: api-management.md  architecture.md  immutability.md  networking.md
docs/operational-guides/: configuration.md  lifecycle-management.md
docs/overview/: keelos-vs-linux.md  philosophy.md  security.md  what-is-keelos.md
docs/platform-installation/: bare-metal.md  cloud.md  local-qemu.md
docs/reference/: api.md  configuration.md  diagnostics-api.md  kernel.md  network-api.md  osctl.md
docs/security/: mtls-certificate-rotation.md
k8s/: README.md  rbac.yaml
pkg/api/: Cargo.toml  build.rs
pkg/api/proto/: node.proto
pkg/api/src/: lib.rs
pkg/config/: Cargo.toml
pkg/config/src/: bootstrap.rs  lib.rs  network.rs
pkg/crypto/: Cargo.toml  README.md
pkg/crypto/src/: ca.rs  cert_expiry.rs  lib.rs  rotation.rs
pkg/init/: README.md
tools/: build-osctl.sh  ci-build-only.sh  ci-build.sh  clippy-in-docker.sh  lint.sh  test-rollback-flow.sh
tools/builder/: 10-keelnet.conf  99-loopback.conf  Dockerfile  README.md  build-images.sh  build-k8s-matrix.sh  build-variant-images.sh  build-variant.sh  build.sh  containerd-config.toml  generate-delta.sh  initramfs-build.sh  iso-build.sh  kernel-build.sh  kubelet-config.yaml
tools/builder/variants/: bare-metal.conf  base.conf  cloud.conf  dev.conf  edge.conf
tools/cross/: Dockerfile
tools/testing/: README.md  run-qemu.sh  setup-kind.sh  setup-test-disk.sh  test-audit.sh  test-boot.sh  test-bootstrap-kind.sh  test-delta-update.sh  test-diagnostics.sh  test-integration.sh  test-network-README.md  test-network.sh  test-rbac.sh  test-update-flow.sh  verify-artifacts.sh
