[workspace]
members = [
    "cmd/keel-init",
    "pkg/api",
    "cmd/keel-agent",
    "cmd/osctl",
    "pkg/crypto",
    "pkg/config",
    # "pkg/init",        # Future
    # "pkg/init",        # Future
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["KeelOS Maintainers"]
license = "Apache-2.0"
repository = "https://github.com/scheeles/keelos"

[workspace.dependencies]
bsdiff = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort" # Critical for PID 1 robustness and size
