[workspace]
members = [
    "cmd/keel-init",
    "pkg/api",
    "cmd/keel-agent",
    "cmd/osctl",
    "pkg/crypto",
    "pkg/config",
    # "pkg/init",        # Future
    # "pkg/init",        # Future
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["KeelOS Maintainers"]
license = "Apache-2.0"
repository = "https://github.com/scheeles/keelos"

[workspace.dependencies]
bsdiff = "0.2"

[workspace.lints.rust]
# Deny unsafe code by default (can be overridden in specific crates if needed)
unsafe_code = "warn"
# Warn on missing documentation for public items
missing_docs = "warn"

[workspace.lints.clippy]
# Lint groups - Set with lower priority (negative numbers = lower priority)
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Specific denials for critical safety issues - Higher priority (default = 0)
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

# Additional helpful lints
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"


[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort" # Critical for PID 1 robustness and size
