[package]
name = "keel-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
keel-api = { path = "../../pkg/api" }
keel-crypto = { path = "../../pkg/crypto" }
keel-config = { path = "../../pkg/config" }
# HTTP server for health/metrics endpoints
axum = "0.8"
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Update scheduling
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio-cron-scheduler = "0.15"
tonic = { version = "0.10", features = ["tls"] }
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream"] }
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }

# OpenTelemetry for observability
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
tracing-opentelemetry = "0.32"
sysinfo = "0.30"
async-trait = "0.1"

# Delta update support
bsdiff = { workspace = true }
tempfile = "3.0"
hostname = "0.4"

# Kubernetes integration for operational certificates
kube = { version = "0.99", features = ["runtime", "derive", "client", "rustls-tls"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }
base64 = "0.21"
rcgen = "0.12"

# Certificate metrics
once_cell = "1.19"
