[package]
name = "keel-init"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
nix = { version = "0.27", features = ["mount", "fs", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }

# OpenTelemetry for boot-time telemetry
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
tracing-opentelemetry = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Certificate generation
openssl = { version = "0.10", features = ["vendored"] }
rcgen = { version = "0.12", features = ["pem", "x509-parser"] }
time = "0.3"


