[package]
name = "keel-init"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
nix = { version = "0.31", features = ["mount", "fs", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }

# OpenTelemetry for boot-time telemetry
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
tracing-opentelemetry = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

#Network configuration
keel-config = { path = "../../pkg/config" }

