[package]
name = "matic-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
matic-api = { path = "../../pkg/api" }
matic-crypto = { path = "../../pkg/crypto" }
matic-config = { path = "../../pkg/config" }
tonic = { version = "0.10", features = ["tls"] }
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream"] }
sha2 = "0.10"

