[package]
name = "matic-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
matic-api = { path = "../../pkg/api" }
matic-crypto = { path = "../../pkg/crypto" }
matic-config = { path = "../../pkg/config" }
# HTTP server for health/metrics endpoints
axum = "0.7"
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Update scheduling
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio-cron-scheduler = "0.9"
tonic = { version = "0.10", features = ["tls"] }
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream"] }
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }

# OpenTelemetry for observability
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-prometheus = "0.14"
tracing-opentelemetry = "0.22"
prometheus = "0.14"
sysinfo = "0.30"
async-trait = "0.1"

