[package]
name = "osctl"
version = "0.1.0"
edition = "2021"

[dependencies]
keel-api = { path = "../../pkg/api" }
keel-crypto = { path = "../../pkg/crypto" }
tonic = { version = "0.10", features = ["tls"] }
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.4", features = ["derive"] }
tokio-stream = "0.1"

# Kubernetes API client
kube = { version = "0.87", features = ["client", "rustls-tls"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }

# Certificate generation
openssl = { version = "0.10", features = ["vendored"] }
anyhow = "1.0"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
chrono = "0.4"
tracing = "0.1"

