[package]
name = "keel-config"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "1.0"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
ipnetwork = "0.21"

[dev-dependencies]
tempfile = "3.8"
