[package]
name = "keel-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
rustls = "0.22"
rustls-pemfile = "2.0"
rcgen = { version = "0.12", features = ["pem"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
openssl = { version = "0.10", features = ["vendored"] }

[lib]
name = "keel_crypto"
path = "src/lib.rs"
